--- a/Export_index/clsDetail.cls
+++ b/Export_index/clsDetail.cls
@@ -7,6 +7,8 @@ Attribute VB_GlobalNameSpace = False
 Attribute VB_Creatable = False
 Attribute VB_PredeclaredId = True
 Attribute VB_Exposed = False
+'@PredeclaredId
+
 '@Folder "Things"
 Option Compare Database
 Option Explicit
@@ -16,7 +18,7 @@ Implements IThing
 Private Type TDetail
     ID As Double
     name As String
-    tableName As String
+    TableName As String
 End Type
 Private This As TDetail
 
@@ -40,8 +42,8 @@ Private Property Get IThing_Name() As String
     IThing_Name = This.name
 End Property
 
-Public Property Get tableName() As String
-    tableName = This.tableName
+Public Property Get TableName() As String
+    TableName = This.TableName
 End Property
 
 Public Property Let ID(ByVal vNewValue As Double)
@@ -52,7 +54,7 @@ Public Property Let name(ByVal vNewValue As String)
     This.name = vNewValue
 End Property
 
-Public Property Let tableName(ByVal vNewValue As String)
-    This.tableName = vNewValue
+Public Property Let TableName(ByVal vNewValue As String)
+    This.TableName = vNewValue
 End Property
 
