--- a/Export_index/clsEntity.cls
+++ b/Export_index/clsEntity.cls
@@ -7,6 +7,8 @@ Attribute VB_GlobalNameSpace = False
 Attribute VB_Creatable = False
 Attribute VB_PredeclaredId = True
 Attribute VB_Exposed = False
+'@PredeclaredId
+
 '@Folder "Things"
 Option Compare Database
 Option Explicit
