--- a/Export_index/clsEntity.cls
+++ b/Export_index/clsEntity.cls
@@ -20,41 +20,41 @@ Private Type TEntity
     name As String
     EntityType As Double
 End Type
-Private This As TEntity
+Private this As TEntity
 
 Public Property Get Self() As clsEntity
     Set Self = Me
 End Property
 
 Public Property Get ID() As Double
-    ID = This.ID
+    ID = this.ID
 End Property
 
 Public Property Get name() As String
-    name = This.name
+    name = this.name
 End Property
 
 Public Property Get EntityType() As Double
-    EntityType = This.EntityType
+    EntityType = this.EntityType
 End Property
 
 Private Property Get IThing_ID() As Double
-    IThing_ID = This.ID
+    IThing_ID = this.ID
 End Property
 
 Private Property Get IThing_Name() As String
-    IThing_Name = This.name
+    IThing_Name = this.name
 End Property
 
 Public Property Let ID(ByVal vNewValue As Double)
-    This.ID = vNewValue
+    this.ID = vNewValue
 End Property
 
 Public Property Let name(ByVal vNewValue As String)
-    This.name = vNewValue
+    this.name = vNewValue
 End Property
 
 Public Property Let EntityType(ByVal vNewValue As Double)
-    This.EntityType = vNewValue
+    this.EntityType = vNewValue
 End Property
 
